--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,22 @@ name: CI
 
 on: [push, pull_request]
 
-steps:
-  - uses: actions/checkout@v2
-  - uses: actions/setup-ruby@v1
-    with:
-      ruby-version: '2.6' # Version range or exact version of a Ruby version to use, using semvers version range syntax.
-  - run: bundle exec rspec
+jobs:
+  build:
+    runs-on: ubuntu-16.04
+    strategy:
+      matrix:
+        ruby: [ '2.5', '2.6' ]
+    name: Ruby ${{ matrix.ruby }} sample
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby }}
+      - run: |
+        sudo apt-get -yqq install libpq-dev
+        gem install bundler
+        bundle install --jobs 4 --retry 3
+        bundle exec rails db:create
+        bundle exec rails db:migrate
+        bundle exec rails test
