--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,8 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - name: Install dependencies
-        run: sudo apt-get -yqq install libpq-dev
-      - name: Install bundler
-        run: gem install bundler
-      - name: Run Specs
-        run: bundle exec rspec
+      - run: sudo apt-get -yqq install libpq-dev
+      - run: |
+        gem install bundler
+        bundle install --jobs 4 --retry 3
+      - run: bundle exec rspec
