--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,7 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - run: sudo apt-get -yqq install libpq-dev
       - run: |
+        sudo apt-get -yqq install libpq-dev
         gem install bundler
-        bundle install --jobs 4 --retry 3
-      - run: bundle exec rspec
+        bundle exec rspec
