--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - run: |
-        sudo apt-get -yqq install libpq-dev
-        gem install bundler
-      - run: bundle exec rspec .
+      - name: Install and run
+        run: |
+          sudo apt-get -yqq install libpq-dev
+          gem install bundler
+          bundle exec rspec .
