--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,5 @@ jobs:
         run: |
           sudo apt-get -yqq install libpq-dev
           gem install bundler
+          bundle install
           bundle exec rspec .
