--- a/spec/cassettes/Acw_Client/_retrieve_contact_by_email/success/is_a_successfull_request.yml
+++ b/spec/cassettes/Acw_Client/_retrieve_contact_by_email/success/is_a_successfull_request.yml
@@ -23,7 +23,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Fri, 01 May 2020 15:50:20 GMT
+      - Fri, 01 May 2020 20:16:47 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -31,10 +31,10 @@ http_interactions:
       Connection:
       - keep-alive
       Set-Cookie:
-      - PHPSESSID=0ebf7815cf6ea3943945a4dc57e8498b; path=/; HttpOnly
-      - __cfduid=de1dbf2595f2acc70eb5c64752ee4587f1588348219; expires=Sun, 31-May-20
-        15:50:19 GMT; path=/; domain=.api-us1.com; HttpOnly; SameSite=Lax
-      - em_acp_globalauth_cookie=b2e5ec76-6174-4146-bd00-e596c394f490; path=/; domain=.url.api-us1.com;
+      - PHPSESSID=36aeb8a42f89b9f2dcbd592e3e94cb7d; path=/; HttpOnly
+      - __cfduid=dc7ae690191d84e8c8158cfcccdd92e671588364207; expires=Sun, 31-May-20
+        20:16:47 GMT; path=/; domain=.api-us1.com; HttpOnly; SameSite=Lax
+      - em_acp_globalauth_cookie=28af1f0e-b1b5-48f2-8b4f-9a1c1df87a04; path=/; domain=.url.api-us1.com;
         secure; httponly
       - em_acp_globalauth_cookie=deleted; expires=Thu, 01-Jan-1970 00:00:01 GMT; Max-Age=0;
         path=/; domain=.url.api-us1.com
@@ -55,9 +55,9 @@ http_interactions:
       X-Content-Type-Options:
       - nosniff
       X-Envoy-Upstream-Service-Time:
-      - '101'
+      - '104'
       X-Request-Id:
-      - b6aaeb5d-11f9-453a-a95a-83f2bc55f218
+      - 83bdc97f-a8e2-4b3c-b15a-6016d36e5121
       Cf-Cache-Status:
       - DYNAMIC
       Expect-Ct:
@@ -65,15 +65,15 @@ http_interactions:
       Server:
       - cloudflare
       Cf-Ray:
-      - 58caa856ac6af5f7-GRU
+      - 58cc2ea82d34f3d3-GRU
       Cf-Request-Id:
-      - '0272878a260000f5f72c20d200000001'
+      - 02737b7d1d0000f3d3fd29b200000001
     body:
       encoding: ASCII-8BIT
-      string: '{"scoreValues":[],"contacts":[{"cdate":"2020-04-29T19:58:03-05:00","email":"someone@email.com","phone":"","firstName":"Anchieta","lastName":"","orgid":"0","orgname":"","segmentio_id":"","bounced_hard":"0","bounced_soft":"0","bounced_date":null,"ip":"0","ua":"","hash":"","socialdata_lastcheck":null,"email_local":"","email_domain":"","sentcnt":"0","rating_tstamp":"0000-00-00","gravatar":"0","deleted":"0","anonymized":"0","adate":null,"udate":"2020-04-29T19:58:03-05:00","edate":null,"deleted_at":"0000-00-00
+      string: '{"scoreValues":[],"contacts":[{"cdate":"2020-04-29T19:58:03-05:00","email":"someone@email.com","phone":"","firstName":"Fulano","lastName":"Sicrano","orgid":"0","orgname":"","segmentio_id":"","bounced_hard":"0","bounced_soft":"0","bounced_date":null,"ip":"0","ua":"","hash":"","socialdata_lastcheck":null,"email_local":"","email_domain":"","sentcnt":"0","rating_tstamp":"0000-00-00","gravatar":"0","deleted":"0","anonymized":"0","adate":null,"udate":"2020-04-29T19:58:03-05:00","edate":null,"deleted_at":"0000-00-00
         00:00:00","created_utc_timestamp":"2020-04-29 19:58:03","updated_utc_timestamp":"2020-04-29
         19:58:03","created_timestamp":"2020-04-29 19:58:03","updated_timestamp":"2020-04-29
         19:58:03","created_by":"0","updated_by":"0","scoreValues":[],"accountContacts":[],"links":{},"id":"349151","organization":null}],"meta":{"total":"1","sortable":true,"page_input":{"segmentid":0,"formid":0,"listid":0,"tagid":0,"limit":20,"offset":0,"search":"someone@email.com","sort":null,"seriesid":0,"waitid":0,"status":-1,"forceQuery":0,"cacheid":""}}}'
     http_version: null
-  recorded_at: Fri, 01 May 2020 15:50:20 GMT
+  recorded_at: Fri, 01 May 2020 20:16:47 GMT
 recorded_with: VCR 5.1.0
